--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,7 @@
 }
 
 body {
-  background-color: #000;
+  background-color: #010202;
   font-family: SourcSancePro, sans-serif;
   font-size: 16px;
   font-weight: 400;
@@ -34,15 +34,24 @@ body {
 
 .header {
   height: 100vh;
-  background-image: url(../img/cover_image.jpg);
-  background-repeat: no-repeat;
-  background-position: top right;
-  background-size: contain;
+  background: linear-gradient(90deg, #010202 -2.88%, #010202 50%, rgba(1, 2, 2, 0.2) 95%);
+}
+
+@media (max-width: 900px) {
+  .header {
+    background-image: url(../img/cover_image.jpg);
+    background-position: center bottom;
+    background-size: 50%;
+    background-repeat: no-repeat;
+    padding-bottom: 250px;
+  }
 }
 
 @media (max-width: 480px) {
   .header {
-    background-position: center bottom;
+    min-height: 950px;
+    padding-bottom: 0;
+    background-size: contain;
   }
 }
 
@@ -104,10 +113,17 @@ body {
   max-width: 460px;
 }
 
+@media (max-width: 900px) {
+  .header .container .header-content {
+    top: 200px;
+    left: 50%;
+    transform: translate3D(-50%, 0, 0);
+  }
+}
+
 @media (max-width: 480px) {
   .header .container .header-content {
     top: 128px;
-    transform: translateY(0);
   }
 }
 
@@ -119,6 +135,7 @@ body {
 
 .header .container .header-content .header-content__sub-title {
   margin: 15px 0 9px;
+  opacity: 0.4;
 }
 
 @media (max-width: 480px) {
@@ -128,15 +145,20 @@ body {
 }
 
 .header .container .header-content .header-content__sub-title span {
-  color: #404040;
-  line-height: 140%;
+  display: inline-block;
+  height: 22px;
+  color: #E5E5E5;
+  line-height: 22px;
+  vertical-align: middle;
   margin-right: 2px;
 }
 
 .header .container .header-content .header-content__sub-title span:last-child {
   margin-right: 0;
   font-size: 14px;
-  border: 1px solid #404040;
+  border: 1px solid #fff;
+  padding: 0 5px;
+  border-radius: 2px;
 }
 
 .header .container .header-content .header-content__review {
@@ -160,10 +182,8 @@ body {
   }
 }
 
-@media (max-width: 480px) {
-  .header .container .header-content .header-content__btn {
-    display: flex;
-  }
+.header .container .header-content .header-content__btn {
+  display: flex;
 }
 
 .header .container .header-content .header-content__btn .btn-preorder {
@@ -179,7 +199,7 @@ body {
   padding-left: 48px;
 }
 
-@media (max-width: 480px) {
+@media (max-width: 900px) {
   .header .container .header-content .header-content__btn .btn-watch {
     width: 64px;
     padding: 0;
