--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,7 +2,7 @@
 @import '_fonts';
 
 body {
-    background-color: #000;
+    background-color: #010202;
     font: {
         family: SourcSancePro, sans-serif;
         size: 16px;
@@ -23,14 +23,20 @@ body {
 
 .header {
     height: 100vh;
-    background: {
-        image: url(../img/cover_image.jpg);
-        repeat: no-repeat;
-        position: top right;
-        size: contain;
-    }
+    background: linear-gradient(90deg, #010202 -2.88%, #010202 50%, rgba(1, 2, 2, 0.2) 95%);
+    @media (max-width: 900px) {
+        background: {
+            image: url(../img/cover_image.jpg);
+            position: center bottom;
+            size: 50%;
+            repeat: no-repeat;
+        }
+        padding-bottom: 250px;
+    } 
     @media (max-width: 480px) {
-        background-position: center bottom;
+        min-height: 950px;
+        padding-bottom: 0;
+        background-size: contain;
     }    
     .container {
         max-width: 1146px;
@@ -77,9 +83,13 @@ body {
             left: 15px;
             transform: translateY(-50%);
             max-width: 460px;
+            @media (max-width: 900px) {
+                top: 200px;
+                left: 50%;
+                transform: translate3D(-50%, 0, 0);
+            }
             @media (max-width: 480px) {
                 top: 128px;
-                transform: translateY(0);
             }
             .header-content__title {
                 @media (max-width: 480px){
@@ -90,18 +100,23 @@ body {
             } 
             .header-content__sub-title {
                 margin: 15px 0 9px; 
+                opacity: 0.4;
                 @media(max-width: 480px) {
                     margin: 13px 0;
                 }
                 span {
-                    color: #404040;
-                    line-height: 140%;
+                    display: inline-block;
+                    height: 22px;
+                    color: #E5E5E5;
+                    line-height: 22px;
+                    vertical-align: middle;
                     margin-right: 2px;
                     &:last-child {
                         margin-right: 0;
                         font-size: 14px;
-                        border: 1px solid #404040;
-
+                        border: 1px solid #fff;
+                        padding: 0 5px;
+                        border-radius: 2px;
                     }
                 }                  
             }
@@ -119,9 +134,7 @@ body {
                 }
             }
             .header-content__btn {
-                @media(max-width: 480px) {
-                    display: flex;
-                }
+                display: flex;
                 .btn-preorder {
                     background-color: #EA6E20;
                     margin-right: 15px;
@@ -134,7 +147,7 @@ body {
                         position: 26px center;        
                     }
                     padding-left: 48px;
-                    @media(max-width: 480px) {
+                    @media(max-width: 900px) {
                         width: 64px;
                         padding: 0;
                         background-position: center center;
